# vanche_3D

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO
models/: SimpleSkin.gltf  alicia.json  seedsan.json
models/eva/: scene.gltf
models/leopard/: scene.gltf
models/wave/: scene.gltf
src/: CMakeLists.txt  main.c  main.cpp
src/face_pose_detection/: face_mapper.cpp  face_mapper.hpp  face_mapper_configurator.cpp  face_recognizer.hpp  face_recognizerThread.cpp  face_recognizer_dlib68.cpp
src/include/: chevan_utils_array.h  chevan_utils_macro.h  chevan_utils_min.h  chevan_utils_print.h  chevan_utils_print.hpp  vanche_utils.h
src/loader/: loader.cpp  loader.hpp  model.cpp  model.hpp  vanche_loader.cpp  vanche_loader.hpp  vanche_model.hpp
src/physics/: vmodelPhysics.cpp  vmodelPhysics.hpp
src/renderer/: vmodelRenderer.cpp  vmodelRenderer.hpp  window.c  window.h
src/shader/MToon/: MToon.frag  MToon.geom  MToon.vert
src/shader/default/: shader.frag  shader.geom  shader.vert
src/shader/skeletonRenderer/: skeleton.frag  skeleton.geom  skeleton.vert
